# serac

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  config.json  database.sql  seed.sql
.github/: CODEOWNERS
docs/: auth.md  auth_guard.md  user_routes.md
env/: .env.example
src/: main.rs
src/config/: db.rs
src/fairings/: logger.rs
src/guards/: auth_guard.rs
src/models/: user.rs
src/routes/: auth_routes.rs  mod.rs  user_routes.rs
src/utils/: jwt.rs
static/js/auth/: login.js  register.js  utils.js
templates/: base.html.tera  index.html.tera
templates/_partials/: footer.html.tera  header.html.tera
templates/auth/: login.html.tera  register.html.tera
