[package]
name = "serac"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Rust-native Role-Based Access Control system with Rocket and PostgreSQL"
repository = "https://github.com/nishujangra/serac"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]